# 15-race-command-center

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  apply-progress.md  design.md  docker-compose.full-stack.yml  docker-compose.global.yml  docker-compose.race.yml  fly.toml
backend/: pyproject.toml  test_unit.db
backend/src/race_command_center/: auth_core.py  auth_deps.py  config.py  constants.py  database.py  insforge_auth.py  main.py  rate_limit.py
backend/src/race_command_center.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/race_command_center/importers/: engine_brake.py  setup_sheet.py
backend/src/race_command_center/models/: circuit.py  decision.py  durable.py  part.py  recommendation.py  report.py  session.py  setup.py  simulation.py  suspension.py  telemetry.py
backend/src/race_command_center/routers/: auth.py  circuits.py  copilot.py  decisions.py  engine_brake.py  health.py  parts.py  pregp.py  reports.py  rider_voice.py  sessions.py  setup.py  setup_impact.py  setup_sheet.py  simulation.py  telemetry.py  websocket.py  (+1 more)
backend/tests/: conftest.py  test_governance_reporting_durable.py
backend/tests/integration/: conftest.py  test_health.py  test_rate_limit.py  test_sessions.py  test_telemetry.py
backend/tests/unit/: conftest.py  test_copilot_router.py  test_decision_service.py  test_engine_brake.py  test_part_lifecycle.py  test_rider_debrief.py  test_risk.py  test_setup_diff.py  test_setup_impact.py  test_setup_sheet.py  test_weekend_schedule.py
(+219 files in other folders)
